--- a/lib/cgraph/cgraph.vcxproj
+++ b/lib/cgraph/cgraph.vcxproj
@@ -104,6 +104,7 @@ win_flex -oscan.c scan.l</Command>
     <ClInclude Include="itos.h" />
     <ClInclude Include="sprint.h" />
     <ClInclude Include="strcasecmp.h" />
+    <ClInclude Include="xml.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="agerror.c" />
@@ -128,6 +129,7 @@ win_flex -oscan.c scan.l</Command>
     <ClCompile Include="subg.c" />
     <ClCompile Include="utils.c" />
     <ClCompile Include="write.c" />
+    <ClCompile Include="xml.c" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\cdt\cdt.vcxproj">
