force all ortho object files to be linked into gvc for CMake and MSBuild
This is what the autotools builds do.

Whithout this, the ortho object files ended up both in
libgvplugin_dot_layout.so and libgvplugin_neato_layout.so which caused
an ASan odr_violation.

This commit also adds MSVC an import/export declaration for orthoEdges
which otherwise would become unresolved.

It also changes gvc to use PRIVATE instead of PUBLIC linking to
ortho. The reason is detailed below.

The ASan error message was:

==235826==ERROR: AddressSanitizer: odr-violation (0x7ff55b6c72c0):
  [1] size=4 'odb_flags' /home/magjac/graphviz/lib/ortho/ortho.c:44:5
  [2] size=4 'odb_flags' /home/magjac/graphviz/lib/ortho/ortho.c:44:5
These globals were registered at these points:
  [1]:
    #0 0x7ff55b8c5938 in __asan_register_globals ../../../../src/libsanitizer/asan/asan_globals.cpp:341
    #1 0x7ff55b2ce1a2 in _sub_I_00099_3 (/home/magjac/graphviz/build/plugin/dot_layout/libgvplugin_dot_layout.so.6+0x43b1a2)
    #2 0x7ff55c28c96d  (/lib64/ld-linux-x86-64.so.2+0x1196d)

  [2]:
    #0 0x7ff55b8c5938 in __asan_register_globals ../../../../src/libsanitizer/asan/asan_globals.cpp:341
    #1 0x7ff55a8008e4 in _sub_I_00099_3 (/home/magjac/graphviz/build/plugin/neato_layout/libgvplugin_neato_layout.so.6+0x6d38e4)
    #2 0x7ff55c28c96d  (/lib64/ld-linux-x86-64.so.2+0x1196d)

==235826==HINT: if you don't care about these errors you may set ASAN_OPTIONS=detect_odr_violation=0
SUMMARY: AddressSanitizer: odr-violation: global 'odb_flags' at /home/magjac/graphviz/lib/ortho/ortho.c:44:5
==235826==ABORTING

Fixes https://gitlab.com/graphviz/graphviz/-/issues/2096.

Here is a more detailed explanation of the problem and the fix:

1. The ortho library is not a library that we ship.

2. The ortho library is a static library.

3. The ortho object modules should be part of the gvc library. With
   autotools they are, but before this fix they are not with CMake or
   MSBuild.

4. A user program should load the ortho

--- a/lib/gvc/CMakeLists.txt
+++ b/lib/gvc/CMakeLists.txt
@@ -70,7 +70,10 @@ if (NOT WIN32)
 endif()
 
 if (${with_ortho})
-    target_link_libraries(gvc PUBLIC ortho)
+    target_link_libraries(gvc PRIVATE
+        $<TARGET_OBJECTS:ortho_obj>
+    )
+    target_link_libraries(gvc PRIVATE ortho)
 endif()
 
 # Installation location of library files
