--- a/lib/gvc.vcxproj
+++ b/lib/gvc.vcxproj
@@ -70,6 +70,7 @@
       <TargetMachine>MachineX86</TargetMachine>
       <ModuleDefinitionFile>$(SolutionDir)lib\gvc\gvc.def</ModuleDefinitionFile>
       <AdditionalDependencies>cdt.lib;cgraph.lib;xml2.lib;expat.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/WHOLEARCHIVE:gvortho.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PreBuildEvent>
       <Command>win_bison -dy -Wno-yacc common\htmlparse.y -o common\htmlparse.c
@@ -101,6 +102,7 @@ awk -f $(SolutionDir)awk\colortbl.awk color_lib &gt; common\colortbl.h</Command>
       <TargetMachine>MachineX86</TargetMachine>
       <ModuleDefinitionFile>$(SolutionDir)lib\gvc\gvc.def</ModuleDefinitionFile>
       <AdditionalDependencies>cdt.lib;cgraph.lib;xml2.lib;expat.lib;zlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/WHOLEARCHIVE:gvortho.lib %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <PreBuildEvent>
       <Command>win_bison -dy -Wno-yacc common\htmlparse.y -o common\htmlparse.c
