--- a/tests/regression_tests/shapes/Makefile.am
+++ b/tests/regression_tests/shapes/Makefile.am
@@ -1,9 +1,8 @@
 SUBDIRS = reference
 
 check test rtest:
-	./shapes.sh
+	python3 shapes.py
 
 EXTRA_DIST = \
-	shapes.sh \
 	test_shapes.py \
 	shapes.py
