update Graphviz URL in AC_INIT configure setup
This URL was out of date (the current Graphviz URL is https://graphviz.org/),
but the third parameter of AC_INIT is also expected to be the bug tracker, not
the project’s homepage.

--- a/configure.ac
+++ b/configure.ac
@@ -17,7 +17,8 @@ dnl Set Graphviz version information
 #	graphviz_version_commit
 m4_include(./version.m4)
 
-AC_INIT([graphviz],[graphviz_version_major().graphviz_version_minor().graphviz_version_micro()],[http://www.graphviz.org/])
+AC_INIT([graphviz],[graphviz_version_major().graphviz_version_minor().graphviz_version_micro()],
+  [https://gitlab.com/graphviz/graphviz/-/issues])
 
 GRAPHVIZ_VERSION_MAJOR=graphviz_version_major()
 GRAPHVIZ_VERSION_MINOR=graphviz_version_minor()
