CMake: when finding Bison, require ≥3.0
Commit 4a13c9598ad3d950a251e5d3e5be8d05c59c6214 made the minimum Bison baseline
3.0. This change teaches CMake ths constraint, so using a version of Bison <3.0
now results in a clearer error during configuration rather than a cryptic
failure during build. Closes #1916.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 # ============================= Build dependencies =============================
 find_package(AWK REQUIRED)
-find_package(BISON REQUIRED)
+find_package(BISON 3.0 REQUIRED)
 find_package(FLEX REQUIRED)
 find_package(Git REQUIRED)
 
