--- a/lib/vpsc/Makefile.am
+++ b/lib/vpsc/Makefile.am
@@ -7,7 +7,7 @@ noinst_LTLIBRARIES = libvpsc_C.la
 endif
 
 noinst_HEADERS = \
-	solve_VPSC.h block.h blocks.h variable.h constraint.h \
+	block.h blocks.h variable.h constraint.h \
 	generate-constraints.h \
 	solve_VPSC.h csolve_VPSC.h pairingheap/PairingHeap.h \
 	pairingheap/dsexceptions.h
