--- a/configure.ac
+++ b/configure.ac
@@ -468,7 +468,7 @@ LIBS=$save_LIBS
 # Checks for library functions
 AC_CHECK_FUNCS([lrand48 drand48 srand48 setmode setenv getenv \
 	cbrt getpagesize \
-  ftruncate lseek64 stat64 unlink select])
+  ftruncate lseek64 stat64 select])
 
 AC_REPLACE_FUNCS([strcasestr])
 
