also install doc/infosrc Python dependencies in Ubuntu 21.04 Docker image
This makes dependencies like jinja2 available for the Pylint CI task.

--- a/ci/ubuntu-21.04/Dockerfile
+++ b/ci/ubuntu-21.04/Dockerfile
@@ -3,6 +3,7 @@ FROM ubuntu:21.04
 ARG DEBIAN_FRONTEND=noninteractive
 
 COPY requirements.txt ./requirements.txt
+COPY doc/infosrc/requirements.txt ./doc-infosrc-requirements.txt
 
 RUN apt-get update -y \
 && apt-get install --no-install-recommends -y \
@@ -89,5 +90,6 @@ libsvgpp-dev \
 # install Python dependencies
 && python3 -m pip install --user --upgrade pip \
 && python3 -m pip install --user --requirement requirements.txt \
+&& python3 -m pip install --user --requirement doc-infosrc-requirements.txt \
 # Clean up
 && rm -rf /var/lib/apt/lists/*
