--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1067,6 +1067,7 @@ lint_pylint:
     - echo "$CI_JOB_NAME-warnings `egrep -c '\<[CRWEF][[:digit:]]{4}\>' $logfile`" > metrics.txt
     - rm $logfile
     - cat metrics.txt
+    - python3 -m pylint --errors-only --rcfile=.pylintrc `find . -name '*.py' | xargs`
   artifacts:
     when: on_success
     expire_in: 1 week
