add JUnit test reports from C++ tests to artifacts
This commit should really have been part of
https://gitlab.com/graphviz/graphviz/-/merge_requests/2035, but it was
accidentally left out.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -251,7 +251,7 @@ portable-source:
         paths:
             - coverage/**
         reports:
-            junit: ./report.xml
+            junit: [./report.xml, build/tests/test_*.xml]
             cobertura: coverage.xml
     except:
         - tags
