add optional ctest & catch2 based test infrastructure
This commit adds a CMakeLists.txt in the tests directory containing
the foundation for easily creating new test executables. It includes
creation of a shared library that the individual test executables can
be linked to, allowing them to be as small as possible.

The tests are optional and can be enabled with the CMake option
with_cxx_tests.

Also added is a first simple test case that always passes to show how
to create test cases.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ option(with_ortho      "ORTHO features in neato layout engine." ON )
 option(with_sfdp       "sfdp layout engine." ON )
 option(with_smyrna     "SMYRNA large graph viewer (disabled by default - experimental)" OFF)
 option(use_sanitizers  "enables using address and undefined behavior sanitizer" OFF)
+option(with_cxx_tests  "enables building the C++ tests" OFF)
 
 if (enable_ltdl)
         add_definitions(-DENABLE_LTDL)
@@ -224,10 +225,16 @@ include(InstallRequiredSystemLibraries)
 include(package_info)
 include(CPack)
 
+# ==================================== Test ====================================
+Include(CTest)
+
 # ======================= Specify subdirectories to build ======================
 add_subdirectory(lib)
 add_subdirectory(plugin)
 add_subdirectory(cmd)
+if (with_cxx_tests)
+    add_subdirectory(tests)
+endif()
 
 MATH(EXPR GRAPHVIZ_PLUGIN_VERSION "${GRAPHVIZ_PLUGIN_VERSION}+1")
 set(GVPLUGIN_VERSION "${GRAPHVIZ_PLUGIN_VERSION}")
