--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 3.12 FATAL_ERROR)
 
 find_package(Boost REQUIRED)
 find_package(Catch2 REQUIRED)
+find_package(Svgpp REQUIRED)
 
 enable_testing()
 
@@ -16,6 +17,7 @@ set_target_properties(test_common PROPERTIES CXX_STANDARD_REQUIRED ON)
 target_include_directories(test_common PRIVATE
     ${Boost_INCLUDE_DIRS}
     ${GRAPHVIZ_LIB_DIR}
+    ${Svgpp_INCLUDE_DIRS}
 )
 target_link_libraries(test_common PUBLIC Catch2::Catch2)
 target_link_libraries(test_common PUBLIC
