archive the just-built dot program in the Ubuntu 21.04 ctest CI job
In an upcoming commit in this series, the dot program will be used by
the ctest CI jobs to configure plugins for pre-install tests without
built-in plugins. This extra archiving is needed since these tests use
the dot program from the location where it resides directly after
being created, i.e., before it is copied to the installation directory
by cpack.

Towards https://gitlab.com/graphviz/graphviz/-/issues/2001.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -526,6 +526,8 @@ ubuntu21-04-cmake-ASan-build-for-ctest:
             - build/plugin/**/lib*.so.*
             # the coverage analysis needs the .gcno files
             - build/**/*.gcno
+            # the dot program is needed to configure the plugins before running pre-install tests
+            - build/cmd/dot/dot
             # the packages need to be installed for the post-install tests
             - Packages/*/*/*/*/*/*deb
             - Metadata/*/*/*/configure.log
