configure the dot layout plugin for use pre-installation
When running ctest, the Graphviz shared libraries are used from the
locations where they reside directly after being created, i.e., before
they are copied to the installation directory by cpack. Since the
pre-configuring of the Graphviz plugins that cpack does is done on the
installed plugins, the pre-install plugins need to be configured
separately.

We use GVBINDIR for this. It tells Graphviz both where to find plugins
and where to read and write the plugin configuration file,
config6. Unfortunately this means that we can only use one plugin
since the others are in separate directories and Graphviz currently
supports only one path in GVBINDIR. We choose to configure the dot
layout plugin which is good for now.

Towards https://gitlab.com/graphviz/graphviz/-/issues/2001.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -237,7 +237,15 @@ portable-source:
         - export OS_ID=$( cat OS_ID )
         - ci/test_coverage.py --init
         - pushd build
+        # Use GVBINDIR to specify where to generate and load config6
+        # since ctest sets LD_LIBRARY_PATH to point to all the
+        # locations where the libs reside before cpack copies them to
+        # the install directory. Without this Graphviz tries to use
+        # the directory lib/gvc/graphviz which does not exist.
+        - export GVBINDIR=$(pwd)/plugin/dot_layout
+        - cmd/dot/dot -v -c
         - ctest --output-on-failure
+        - unset GVBINDIR
         - popd
         - ci/install-packages.sh
         # Many of the tests run by pytest currently trigger ASan
