Do not install `command_line`
* `command_line` is solely for testing and
  shouldn't be installed to the prefix.

--- a/tests/unit_tests/lib/common/Makefile.am
+++ b/tests/unit_tests/lib/common/Makefile.am
@@ -16,7 +16,7 @@ AM_LDFLAGS = \
 
 TESTS = command_line
 
-bin_PROGRAMS = $(TESTS)
+check_PROGRAMS = $(TESTS)
 
 command_line_SOURCES = command_line.c
 command_line_CPPFLAGS = $(AM_CPPFLAGS) -DDEMAND_LOADING=1
