remove unnecessary './' prefix on report.txt output in CI
Commit 8f7c1f4c2ef253bc1a763515b344d599e5c199ee removed any directory prefix
from this artifact, outputting it to the root directory of the Graphviz checkout
in CI. In this case, like metrics.txt, it does not need an explicit './' prefix.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -211,7 +211,7 @@ portable-source:
         - Packages/*/*/*/*/*/*/*.zip
         reports:
             metrics: metrics.txt
-            junit: ./report.xml
+            junit: report.xml
     tags:
         - windows
     except:
@@ -226,7 +226,7 @@ portable-source:
         - python3 -m pytest --verbose --junitxml=report.xml ci/tests.py tests rtest
     artifacts:
         reports:
-            junit: ./report.xml
+            junit: report.xml
     except:
         - tags
 
