--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -579,6 +579,7 @@ macos-cmake-build:
         # fail on any compiler warnings
         - export CFLAGS=-Werror
         - export CXXFLAGS=-Werror
+        - export CMAKE_OPTIONS="-Dwith_cxx_api=ON"
     tags:
         - shared-macos-amd64
 
