--- a/plugin/neato_layout/gvplugin_neato_layout.vcxproj
+++ b/plugin/neato_layout/gvplugin_neato_layout.vcxproj
@@ -67,7 +67,7 @@
       <SubSystem>Windows</SubSystem>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalDependencies>cgraph.lib;gvc.lib;pathplan.lib;neatogen.lib;circogen.lib;twopigen.lib;fdpgen.lib;sparse.lib;cdt.lib;glib-2.0.lib;vpsc.lib;patchwork.lib;gvortho.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>cgraph.lib;gvc.lib;pathplan.lib;neatogen.lib;circogen.lib;twopigen.lib;fdpgen.lib;sparse.lib;cdt.lib;glib-2.0.lib;vpsc.lib;patchwork.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -86,7 +86,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalDependencies>cgraph.lib;gvc.lib;pathplan.lib;neatogen.lib;circogen.lib;twopigen.lib;fdpgen.lib;sparse.lib;cdt.lib;glib-2.0.lib;vpsc.lib;patchwork.lib;gvortho.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>cgraph.lib;gvc.lib;pathplan.lib;neatogen.lib;circogen.lib;twopigen.lib;fdpgen.lib;sparse.lib;cdt.lib;glib-2.0.lib;vpsc.lib;patchwork.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
