add MSBuild link dependency on gvc for neatogen
This is step 2 of 4 in replacing ortho with gvc as a link dependency
for neatogen.

Towards https://gitlab.com/graphviz/graphviz/-/issues/2096.

--- a/lib/neatogen/gvneatogen.vcxproj
+++ b/lib/neatogen/gvneatogen.vcxproj
@@ -65,7 +65,7 @@
     </ClCompile>
     <Lib />
     <Lib>
-      <AdditionalDependencies>gvortho.lib</AdditionalDependencies>
+      <AdditionalDependencies>gvc.lib;gvortho.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
@@ -80,7 +80,7 @@
     </ClCompile>
     <Lib />
     <Lib>
-      <AdditionalDependencies>gvortho.lib</AdditionalDependencies>
+      <AdditionalDependencies>gvc.lib;gvortho.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
