add MSBuild project reference to ortho for gvc
This is a preparation for adding ortho as a link dependency to gvc in
an upcoming commit. It ensures the correct build order under all
circumstances, also when gvc is built stand-alone. A link dependency
is not enough which does not cause the link dependency to actually be
built.

A project reference is a more modern way of creating a project
dependency than the centralized project dependencies in the solution
file. See https://stackoverflow.com/a/2317017/3122101.

Towards https://gitlab.com/graphviz/graphviz/-/issues/2096.

--- a/lib/gvc.vcxproj
+++ b/lib/gvc.vcxproj
@@ -209,6 +209,9 @@ awk -f $(SolutionDir)awk\colortbl.awk color_lib &gt; common\colortbl.h</Command>
       <Project>{83cf0498-7884-49d3-8b3c-263c5af5fe1b}</Project>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="ortho\gvortho.vcxproj">
+      <Project>{2d29953f-2d74-471e-a064-5d184e762dff}</Project>
+    </ProjectReference>
     <ProjectReference Include="patchwork\gvpatchwork.vcxproj">
       <Project>{6bd77bde-151d-4824-a8bc-9f067662f7ab}</Project>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
