--- a/lib/neatogen/gvneatogen.vcxproj
+++ b/lib/neatogen/gvneatogen.vcxproj
@@ -65,7 +65,7 @@
     </ClCompile>
     <Lib />
     <Lib>
-      <AdditionalDependencies>gvc.lib;gvortho.lib</AdditionalDependencies>
+      <AdditionalDependencies>gvc.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
@@ -80,7 +80,7 @@
     </ClCompile>
     <Lib />
     <Lib>
-      <AdditionalDependencies>gvc.lib;gvortho.lib</AdditionalDependencies>
+      <AdditionalDependencies>gvc.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
