--- a/lib/dotgen/gvdotgen.vcxproj
+++ b/lib/dotgen/gvdotgen.vcxproj
@@ -110,6 +110,11 @@
     <ClCompile Include="rank.c" />
     <ClCompile Include="sameport.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\gvc.vcxproj">
+      <Project>{15229511-9f6c-48a5-9194-660ca6492563}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
