--- a/lib/neatogen/gvneatogen.vcxproj
+++ b/lib/neatogen/gvneatogen.vcxproj
@@ -165,6 +165,11 @@
     <ClCompile Include="stuff.c" />
     <ClCompile Include="voronoi.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\gvc.vcxproj">
+      <Project>{15229511-9f6c-48a5-9194-660ca6492563}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
