[nfc] add dependency to the gvc library for all tests
The tests directly use gvc so this is correct, although it worked even
before this change since gvc was available through other libraries.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ target_link_libraries(test_common PUBLIC
     gvplugin_gd
     gvplugin_neato_layout
     cgraph
+    gvc
 )
 
 macro(create_test testname)
