--- a/lib/vmalloc/CMakeLists.txt
+++ b/lib/vmalloc/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(vmalloc STATIC
     vmhdr.h
 
     # Source files
-    vmbest.c
+    vmalloc.c
     vmclear.c
     vmclose.c
     vmopen.c
