--- a/lib/vmalloc/Makefile.am
+++ b/lib/vmalloc/Makefile.am
@@ -5,7 +5,7 @@ AM_CPPFLAGS = -I$(top_srcdir)/lib
 noinst_HEADERS = vmalloc.h vmhdr.h
 noinst_LTLIBRARIES = libvmalloc_C.la
 
-libvmalloc_C_la_SOURCES = vmbest.c vmclear.c vmclose.c \
+libvmalloc_C_la_SOURCES = vmalloc.c vmclear.c vmclose.c \
 	vmopen.c \
 	vmstrdup.c
 
