explicitly enable Smyrna when running rpmbuild on Fedora/RHEL
This is preparation for a future commit that will flip the polarity of the
default if no Smyrna preference is passed to `./configure`. Related to #1834,
#1829, #1836, #1854.

--- a/redhat/graphviz.spec.fedora.in
+++ b/redhat/graphviz.spec.fedora.in
@@ -983,6 +983,8 @@ CFLAGS="$RPM_OPT_FLAGS" \
         --without-gtkgl \
         --without-gtkglext \
         --without-smyrna \
+%else
+        --with-smyrna \
 %endif
         --with-qt \
         --with-visio \
